# python-curve25519-dalek

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
curve25519_dalek/: __init__.py
src/: constants.rs  lib.rs  ristretto.rs  scalar.rs
tests/: test_ristretto.py  test_scalar.py  test_version.py
