[package]
name = "python-curve25519-dalek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "curve25519_dalek"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }

[dependencies.curve25519-dalek]
version = "3.0.0"
git = "https://github.com/signalapp/curve25519-dalek.git"
branch = "lizard2"
