[metadata]
name = curve25519_dalek
version = 0.0.4
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Rust
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X

[options]
packages = curve25519_dalek
include_package_data = True
zip_safe = False
